html 14-16 + js file

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <script type="text/javascript" src="basic.js"></script>
      <script type="text/javascript" src="intermediate.js"></script>
      <script type="text/javascript" src="advanced.js"></script>
+
+     <div></div><br>
+     <div></div><br>
+     <div></div>
 </body>
 
 </html>
