--- a/index.html
+++ b/index.html
@@ -7,13 +7,28 @@
 </head>
 
 <body>
+    <forms>
+        <select id="work" name="work">
+            <option value="it" selected>IT</option>
+            <option value="hospit">Hospital</option>
+            <option value="financ">Finance</option>
+        </select><br>
+        <input id="firstname" name="Firstname" placeholder="Firstname"><br>
+        <input id="lastname" name="Lastname" placeholder="Lastname"><br>
+        <input id="age" name="age" placeholder="Age"><br><br>
+        <button onclick="display()">
+            Submit
+        </button><br><br>
+    </forms>
+    <div id="cbg">
+        <div id="dis4"></div><br>
+        <div id="dis1"></div><br>
+        <div id="dis2"></div><br>
+        <div id="dis3"></div>
+    </div>
     <script type="text/javascript" src="basic.js"></script>
-     <script type="text/javascript" src="intermediate.js"></script>
-     <script type="text/javascript" src="advanced.js"></script>
-
-     <div></div><br>
-     <div></div><br>
-     <div></div>
+    <script type="text/javascript" src="intermediate.js"></script>
+    <script type="text/javascript" src="advanced.js"></script>
 </body>
 
 </html>
