--- a/index3.html
+++ b/index3.html
@@ -4,10 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <title>JS Day04</title>
+    <link rel="stylesheet" href="adv2.css">
 </head>
 
 <body>
- 
+ <canvas id="circle">
+</canvas>
+<p id="txt"></p>
 
     <script type="text/javascript" src="advanced.js"></script>
 </body>
